Fixed spacing for icons on for left margin

--- a/kohese-portal/client/css/components/tree.scss
+++ b/kohese-portal/client/css/components/tree.scss
@@ -117,7 +117,7 @@
 }
 
 .no-icon {
-  padding-left : 14px
+  padding-left : 12.5px !important;
 }
 
 .trim-info {
